--- a/style.css
+++ b/style.css
@@ -143,3 +143,44 @@ li a:hover {
   width: 100px;
   overflow-x: hidden;
 }
+.footer {
+  height: 550px;
+  display: flex;
+  margin-top: 30px;
+  justify-content: center;
+  border-top-width: 0.1px;
+  border-top-color: white;
+  border-top-style: solid;
+  background-color: white;
+  filter: drop-shadow(0px 2px 5px rgb(121, 121, 121, 1));
+}
+.listas {
+  display: flex;
+  flex-direction: row;
+  width: 85vw;
+  margin-top: 45px;
+}
+.Titulo {
+  font-size: 1.2rem;
+  font-family: 'SoDo Sans' Helvetica, Arial, sans-serif;
+  font-weight: 400;
+  list-style: none;
+  margin-bottom: 15px;
+}
+.Colunas {
+  width: 180px;
+  margin-right: 50px;
+}
+.liF {
+  color: rgba(0, 0, 0, 0.56);
+  font-family: 'SoDo Sans' Helvetica, Arial, sans-serif;
+  list-style: none;
+  margin-bottom: 10px;
+  font-size: 15px;
+  transition: 0.2s;
+}
+.liF:hover {
+  color: rgba(0, 0, 0, 1);
+  cursor: default;
+  filter: drop-shadow(0px 1px 5px rgba(1, 1, 1, 0.2));
+}
